<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/north"
        android:layout_above="@id/center"
        android:layout_alignLeft="@id/center"
        android:background="#f99" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/east"
        android:layout_alignTop="@id/center"
        android:layout_toEndOf="@id/center"
        android:background="#f99" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/west"
        android:layout_alignBottom="@id/center"
        android:layout_toStartOf="@id/center"
        android:background="#f99" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/south"
        android:layout_below="@id/center"
        android:layout_alignRight="@id/center"
        android:background="#f99" />
    <TextView
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/center"
        android:textSize="48sp"
        android:background="#cf9"/>
</RelativeLayout>
